# routes/index.js
@@ -6,6 +6,8 @@ router.get("/", (req, res) => {
   res.send("Hello World!");
 });
 
+router.use("/movies", require("./movies"));
+
 router.use("/rockbands", require("./rockbands"));
 
 module.exports = router;
